3.0.2

    Bugfix release, some new urgent features, stability improvements

    Emergency interfaces

     fixes: correct display of long item names
    fixed: dm_rule_props acl in SFA
     fixed: removed js minimalization (users got bugs and wrong behavor on some systems) until fixed
     fixes: various bug fixes

    LM EI

    - reset button and expire timer in LM EI show/hide when prop changed

    Core

    fixes: remove empty controller group when all objects are deleted

    - each set_prop call now logs what's actually changed
    - added item oid (type:group/item_id) - reserved for the future releases
    - added stop_on_critical option in config (default: yes),
       server will be restarted via safe-run if critical exception occur
    - uptime in dump and test API function, last 100 exceptions are now stored in a dump,
       dumps are now compressed with gzip

    LM PLC:

    - list_remote returns array instead of dict + controller_id proprety
    - result function in macro api. terminate and result function accept action uuid as a param
    - on_set lm rule (status changed to 1)
    - new LM API and macro functions: clear (set lvar value to 0), toggle (toggles lvar value between 0 and 1)
    - cmd macro function now accepts full controller ids (uc/controller_id) as well as short
    - new macro functions: ls, open_oldest, open_newest

    SFA:

    - list_remote returns array instead of dict + controller_id proprety
    - list_macros contains now controller property
    - append_controller now tries to autodetect controller type if no type specified
    - sfa pvt access logs

    Common:

    - easy-setup.sh - an interactive/automatic script to quickly set up the current host
    - ability to run controllers under restricted user

3.0.1
    Minor release with some urgent features

    Core

    - EVA_ITEM_PARENT_GROUP variable in script ENV which contains the parent group of the item
