@@ -42,11 +42,17 @@
                                         style="display: none">
             <select id="s_unit_group" data-role="none" class="st1"
                                 onchange="load_units()"></select>
+            <img id="tbtn_reload_units" src="i/reload.png" class="tbtn_l"
+                    alt="Reload" title="Reload"
+                    onclick="reload_units()" />
         </div>
         <div class="col-xs-10 col-sm-7" id="toolbar_sensors"
                                         style="display: none">
             <select id="s_sensor_group" data-role="none" class="st1"
                                 onchange="load_sensors()"></select>
+            <img id="tbtn_reload_sensors" src="i/reload.png" class="tbtn_l"
+                    alt="Reload" title="Reload"
+                    onclick="reload_sensors()" />
         </div>
         <div class="col-xs-10 col-sm-7" id="toolbar_log"
              style="display: none; height: 54px; padding-top: 25px;">
