@@ -9,9 +9,14 @@
      fixed: removed js minimalization (users got bugs and wrong behavor on some systems) until fixed
      fixes: various bug fixes
 
+    UC EI
+
+    - refresh buttons for units and sensors
+
     LM EI
 
     - reset button and expire timer in LM EI show/hide when prop changed
+    - refresh buttons for lvars, macros and rules
 
     Core
 
